# aws-ecs-deploy

./: .gitignore  LICENSE  Makefile  aws-ecs-deploy.cabal  readme.md
src/: Main.hs
