name:                aws-ecs-deploy
version:             0.1.0.0
copyright:           Copyright: (c) 2018 Ulf Leopold
category:            application
build-type:          Simple
cabal-version:       >=1.10

executable aws-ecs-deploy
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , amazonka 
                     , amazonka-ecs
                     , safe
                     , lens
                     , bytestring
                     , text
                     , regex-tdfa
